--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
                                 <a href="pages/lessons.html">Премьера</a>
                             </li>
                             <li class="menu_link">
-                                <a href="pages/characters.html" target="_blank">Персонажи</a>
+                                <a href="pages/characters.html">Персонажи</a>
                             </li>
                             <li class="menu_link">
-                                <a href="https://t.me/NurDinBuy16" target="_blank">Игра</a>
+                                <a href="pages/game.html">Игра</a>
+                            </li>
+                            <li class="menu_link">
+                                <a href="pages/cards.html">Карточки</a>
                             </li>
                         </ul>
                         <button class="btn" id="btn-get">Купить билет</button>
@@ -73,33 +76,34 @@
                 <div class="slide active_slide" data-background="images/best-1-background.png">
                     <div class="slide_card">
                         <img src="images/best-1.png" alt="">
-                        <p>Лучшие вырезки из нового сезона тысячелетней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие </p>
+                        <p>"Союз судеб": Во время кровопролитной войны неожиданные союзы возникали среди врагов. Капитаны и враги временно объединяли усилия, чтобы противостоять ещё более могущественным угрозам. Из этого союза рождались необычные альянсы, и каждый воин понимал, что выживание мира лежит в их общих руках. Каждый воин осознавал, что несмотря на прошлые разногласия, только вместе они способны противостоять этой угрозе.</p>
                     </div>
                 </div>
                 <div class="slide" data-background="images/best-2-background.png">
                     <div class="slide_card">
                         <img src="images/best-2.png" alt="">
-                        <p>Лучшие вырезки из нового сезона тысячелетней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие </p>     
+                        <p>"Решающий момент": Ичиго, обретший новую силу, вступил в последнюю битву против могущественного врага. Его меч светился ярче, чем когда-либо, когда он встал против человека, чья жажда мести и разрушения ставила под угрозу все, что ему дорого. В этой исключительной дуэли Ичиго должен был воплотить все свои силы и умения, чтобы победить. От каждого удара гремела земля, а аура могущества окутывала схватку, давая ему новую решимость.</p>     
                     </div>
                 </div>
                 <div class="slide" data-background="images/best-3-background.png">
                     <div class="slide_card">
                         <img src="images/best-3.png" alt="">
-                        <p>Лучшие вырезки из нового сезона тысячелетней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие </p>     
+                        <p>"Столкновение Районов": Великая битва началась, когда миры сошлись в непримиримой схватке. Капитаны 13-го отряда, возглавляемые Кенпачи Зараки, вышли на противостояние с мощными стражами квинси. Раскололось небо от взрывов, молний и мощи, когда они сразились в эпической схватке за сохранение мира. Мечи светились ярче огней, окутывая бойцов, чья решимость была несокрушима. Эта битва превращалась в легенду, в которой каждый участник отдавал все ради победы.</p>     
                     </div>
                 </div>
                 <div class="slide" data-background="images/best-4-background.png">
                     <div class="slide_card">
                         <img src="images/best-4.png" alt="">
-                        <p>Лучшие вырезки из нового сезона тысячелетней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие </p>
+                        <p>"Сквозь туман времени": В процессе битвы открывались тайны, которые древние тексты хранили в секрете. Путешествуя сквозь временной поток, герои открывали темные страницы своего прошлого, разгадывая загадки, которые могли изменить ход битвы. Время становилось как оружие, так и врагом для всех, кто стоял на пути разрушения. Знание было ключом к пониманию, и каждая раскрытая тайна приближала героев к истине, которая могла изменить всё.</p>
                     </div>
                 </div>
                 <div class="slide" data-background="images/best-5-background.png">
                     <div class="slide_card">
                         <img src="images/best-5.png" alt="">
-                        <p>Лучшие вырезки из нового сезона тысячелетней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие вырезки из нового сезона тысячи летней кровавой войны.Лучшие </p>     
+                        <p>"Возвращение душевных связей": Во время хаоса войны и потерь, герои находили силу в своих узах и дружбе. Важность душевных связей становилась еще ярче на фоне кровавых сражений, напоминая всем, что их сила и решимость укоренены в их отношениях и верности друг другу. В этом мире разрушения и хаоса, их дружба была как свет во тьме, поддерживающая их в самые сложные моменты.</p>     
                     </div>
                 </div>
+                <div class="carousel-dots"></div>
             </div>
         </div>  
     </div>
@@ -122,11 +126,62 @@
 
     <div class="footer">
         <div class="container">
-            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
-                <div class="inner_footer">
-                    <h2>Made by NurDinBuy</h2>
+            <div class="footer_inner">
+                <div class="first_block">
+                    <div class="footer_logotype">
+                        <div class="filter_logo">Bleach</div>
+                        <div class="logo">Bleach</div>
+                    </div>
+                    <span>Designed by Aijana Atkanova</span>
+                    <ul class="footer_menu">
+                        <li>
+                            <a href="">
+                                <img src="images/youtube.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/twitter.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/discord.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/robot.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/github.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="images/telegramm.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                    <span class="copyright">©2023 Bleach tops movie films</span>
                 </div>
-            </a>
+                <div class="second_block">
+                    <div class="pages">
+                        <span>Страницы</span>
+                        <a href="index.html">Главная</a>
+                        <a href="pages/home_works.html">Бронь билетов</a>
+                        <a href="pages/lessons.html">Премьера</a>
+                    </div>
+                    <div class="pages">
+                        <span>Страницы</span>
+                        <a href="pages/characters.html">Персонажи</a>
+                        <a href="pages/cards.html">Карточки</a>
+                        <a href="pages/">Игра</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -136,9 +191,21 @@
         <div class="modal_content">
             <form action="#">
                 <div class="modal_close">&times;</div>
-                <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
-                <input required placeholder="Ваше имя" name="fullname" type="text" class="modal_input">
-                <input required placeholder="Ваш номер телефона" name="phone_number" type="phone" class="modal_input">
+                <div class="modal_title">Получите скидку на билет</div>
+                <div></div>
+                <p>Выберите город для просмотра доступности сеанса.</p>
+                <label for="name">Ваши имя и фамилия</label>
+                <input id="name" required placeholder="Введите ваше имя" name="fullname" type="text" class="modal_input">
+                <div class="form_items">
+                    <div class="form_item">
+                        <label for="number">Номер телефона</label>
+                        <input id="number" required placeholder="Ваш номер телефона" name="phone_number" type="text" class="modal_input">
+                    </div>
+                    <div class="form_item">
+                        <label for="mail">Почта</label>
+                        <input id="mail" required placeholder="Ваша почта" name="e-mail" type="email" class="modal_input">
+                    </div>
+                </div>
                 <button class="btn btn_dark btn_min">Перезвонить мне</button>
             </form>
         </div>
