--- a/pages/cards.html
+++ b/pages/cards.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bleach characters</title>
-    <link rel="shortcut icon" href="images/bleach-logo.jpeg">
+    <title>Document</title>
     <link rel="stylesheet" href="../css/core.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/characters.css">
+    <link rel="stylesheet" href="../css/cards.css">
 </head>
 <body>
     <div class="wrapper">
@@ -39,11 +38,8 @@
                 </div>
             </div>
         </div>
-        <div class="logo">
-            <img src="../images/bleach-text-logo.jpeg">
-        </div>
-        <div class="characters">
-            
+        <div class="cards">
+
         </div>
         <div class="footer">
             <div class="container">
@@ -105,21 +101,8 @@
                 </div>
             </div>
         </div>
-        <div class="modal">
-            <div class="modal_dialog">
-                <div class="modal_content">
-                    <form action="#">
-                        <div class="modal_close">&times;</div>
-                        <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
-                        <input required placeholder="Ваше имя" name="fullname" type="text" class="modal_input">
-                        <input required placeholder="Ваш номер телефона" name="phone_number" type="phone" class="modal_input">
-                        <button class="btn btn_dark btn_min">Перезвонить мне</button>
-                    </form>
-                </div>
-            </div>
-        </div>
     </div>
 </body>
-<script src="../js/characters.js"></script>
+<script src="../js/cards.js"></script>
 <script src="../js/modal.js"></script>
 </html>
