--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -14,25 +14,27 @@
         <div class="container">
             <div class="inner_header">
                 <a href="../index.html">
-                    <div class="logotype">
-                        <h2>Java<span>Script</span></h2>
-                    </div>
+                    <div class="logotype">Bleach</div>
+                    <div class="logotype filter">Bleach</div>
                 </a>
                 <ul class="menu">
                     <li class="menu_link">
-                        <a href="../pages/home_works.html">Home Works</a>
+                        <a href="../pages/home_works.html">Бронь билетов</a>
                     </li>
                     <li class="menu_link">
-                        <a href="../pages/lessons.html">Lessons</a>
+                        <a href="../pages/lessons.html">Премьера</a>
                     </li>
                     <li class="menu_link">
-                        <a href="https://t.me/NurDinBuy16" target="_blank">Send hw</a>
+                        <a href="../pages/characters.html">Персонажи</a>
                     </li>
                     <li class="menu_link">
-                        <a href="../pages/characters.html" target="_blank">Bleach Characters</a>
+                        <a href="../pages/game.html">Игра</a>
+                    </li>
+                    <li class="menu_link">
+                        <a href="../pages/cards.html">Карточки</a>
                     </li>
                 </ul>
-                <button class="btn" id="btn-get">Click me!</button>
+                <button class="btn" id="btn-get">Купить билет</button>
             </div>
         </div>
     </div>
@@ -148,11 +150,62 @@
 
     <div class="footer">
         <div class="container">
-            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
-                <div class="inner_footer">
-                    <h2>Made by NurDinBuy</h2>
+            <div class="footer_inner">
+                <div class="first_block">
+                    <div class="footer_logotype">
+                        <div class="filter_logo">Bleach</div>
+                        <div class="logo">Bleach</div>
+                    </div>
+                    <span>Designed by Aijana Atkanova</span>
+                    <ul class="footer_menu">
+                        <li>
+                            <a href="">
+                                <img src="../images/youtube.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../images/twitter.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../images/discord.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../images/robot.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../images/github.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../images/telegramm.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                    <span class="copyright">©2023 Bleach tops movie films</span>
                 </div>
-            </a>
+                <div class="second_block">
+                    <div class="pages">
+                        <span>Страницы</span>
+                        <a href="../index.html">Главная</a>
+                        <a href="../pages/home_works.html">Бронь билетов</a>
+                        <a href="../pages/lessons.html">Премьера</a>
+                    </div>
+                    <div class="pages">
+                        <span>Страницы</span>
+                        <a href="../pages/characters.html">Персонажи</a>
+                        <a href="../pages/cards.html">Карточки</a>
+                        <a href="../pages/">Игра</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
